public enum TokenType {
  KEYWORD, IDENTIFIER, OPERATOR, LITERAL, SYNTAX
}
