package ast.interfaces;

public interface ExpressionNode extends Node {
}
