package ast.interfaces;

public interface StatementNode extends Node {
}
